# SimpleSDK

./: LICENSE  Pipfile  README.md  pyproject.toml
examples/basic_api/: main.py
examples/basic_api/basic_sdk/: client.py  models.py  my_api.py
simple_sdk/: __init__.py  api.py  auth.py  client.py  config.py  credentials.py  errors.py
