[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_sdk"
version = "0.1.2"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.4",
    "pyserde>=0.31.1",
    "orjson",
]

[tool.setuptools.packages.find]
include = ["simple_sdk*"]
exclude = ["examples*", "tests*"]
